@@ -388,8 +388,8 @@ be coerced to addresses.
 C<packages> is an arrayref of L<Net::Async::Webservice::UPS::Package>
 (or a single package, will be coerced to a 1-element array ref).
 
-I<NOTE>: the C<id> field of the packages you pass in will be modified,
-and set to their position in the array.
+I<NOTE>: the C<id> field of the packages I<used to be modified>. It no
+longer is.
 
 Optional parameters:
 
@@ -440,8 +440,6 @@ sub request_rate {
     unless (scalar(@$packages)) {
         Error::TypeTiny::croak("request_rate() was given an empty list of packages");
     }
-
-    { my $pack_id=0; $_->id(++$pack_id) for @$packages }
 
     my $cache_key;
     if ($self->does_caching) {
@@ -867,6 +865,7 @@ sub ship_confirm {
                 total_charges => $charges->{TotalCharges}{MonetaryValue},
                 shipment_digest => $response->{ShipmentDigest},
                 shipment_identification_number => $response->{ShipmentIdentificationNumber},
+                packages => $packages,
             });
         },
     );
@@ -923,6 +922,8 @@ sub ship_accept {
         },
     );
 
+    my $packages = $args->{confirm}->packages;
+
     $self->xml_request({
         data => \%data,
         url_suffix => '/ShipAccept',
@@ -946,10 +947,11 @@ sub ship_accept {
                 shipment_identification_number => $results->{ShipmentIdentificationNumber},
                 _pair_if( pickup_request_number => $results->{PickupRequestNumber} ),
                 _img_if( control_log => $results->{ControlLogReceipt} ),
-                package_results => [ map {
-                    my $pr = $_;
+                package_results => [ pairwise {
+                    my ($pr,$pack) = ($a, $b);
 
                     Net::Async::Webservice::UPS::Response::PackageResult->new({
+                        package => $pack,
                         tracking_number => $pr->{TrackingNumber},
                         currency => $pr->{ServiceOptionsCharges}{CurrencyCode},
                         service_option_charges => $pr->{ServiceOptionsCharges}{MonetaryValue},
@@ -967,7 +969,7 @@ sub ship_accept {
                         _pair_if( form_group_id => $pr->{FormGroupId} ),
                         _img_if( cod_turn_in => $pr->{CODTurnInPage} ),
                     });
-                } @{$results->{PackageResults}//[]} ],
+                } @{$results->{PackageResults}//[]},@$packages ],
             });
         },
     );
