@@ -1,6 +1,6 @@
 package Net::Async::Webservice::UPS::Response::ShipmentConfirm;
 use Moo;
-use Types::Standard qw(Str);
+use Types::Standard qw(Str ArrayRef);
 use Net::Async::Webservice::UPS::Types qw(:types);
 use namespace::autoclean;
 
@@ -23,6 +23,19 @@ A string with encoded information needed by UPS in the ShipAccept call.
 has shipment_digest => (
     is => 'ro',
     isa => Str,
+    required => 1,
+);
+
+=attr C<packages>
+
+For internal use: the list of packages passed into the
+L<Net::Async::Webservice::UPS/ship_confirm> call.
+
+=cut
+
+has packages => (
+    is => 'ro',
+    isa => ArrayRef[Package],
     required => 1,
 );
 
