@@ -1,4 +1,7 @@
 {{$NEXT}}
+ - the ::Response::PackageResult objects in a
+   ::Response::ShipmentAccept now link back to the ::Package objects
+   they relate to
 
 1.0.4     2014-09-02 09:54:21+01:00 Europe/London
  - bump requirement of Types::Standard to get fix for RT #98362; it
